--- a/ADMFacturar/Views/Vendedores/Index.cshtml
+++ b/ADMFacturar/Views/Vendedores/Index.cshtml
@@ -86,7 +86,7 @@
 							@* <td class="p-3 border border-gray-300"> *@
 								<td>
 									<div class="flex justify-center space-x-2">
-										<a asp-action="ActualizarVendedor" asp-route-PK="@vendedor.PK_Vendedor" class="text-blue-600 hover:text-blue-900" title="Editar">
+										<a onclick="ActuVarVendedor('@vendedor.PK_Vendedor')" class="text-blue-600 hover:text-blue-900" title="Editar">
 											<i class="fas fa-edit"></i>
 										</a>
 										<form method="post" asp-action="DesactivarVendedor" class="desactivar-form">
@@ -160,7 +160,51 @@
 <!--                  Final Modal de Crear Tempalte                        -->
 
 <!--                  Modal de Actualizar Template                        -->
-
+	<div id="modalActuVendedor" class="modal">
+		<div class="modal-content">
+			<form asp-action="ActualizarVendedor" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formupdate">
+				<div class="border-b border-gray-700 pb-6">
+					<h2 class="text-lg font-semibold leading-7 text-white">Actualizar Vendedor</h2>
+				</div>
+				<div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+					<div class="sm:col-span-2">
+						<label for="Nombre" class="block text-sm font-medium text-gray-300">Nombre Vendedor</label>
+						<div class="mt-2">
+							<input asp-for="Nombre" type="text" id="nombre" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+						</div>
+					</div>
+					<div class="sm:col-span-2">
+						<label for="Telefono" class="block text-sm font-medium text-gray-300">Telefono Vendedor</label>
+						<div class="mt-2">
+							<input asp-for="Telefono" type="text" id="tel" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+						</div>
+					</div>
+					<div class="sm:col-span-2">
+						<label for="Correo" class="block text-sm font-medium text-gray-300">Correo Vendedor</label>
+						<div class="mt-2">
+							<input asp-for="Correo" type="text" id="email" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+						</div>
+					</div>
+					<div class="sm:col-span-2">
+						<label for="Estado" class="block text-sm font-medium text-gray-300">Estado</label>
+						<div class="mt-2">
+							<select asp-for="Estado" id="state" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+								<option value="true">Activo</option>
+								<option value="false">Inactivo</option>
+							</select>
+						</div>
+					</div>
+				</div>
+				<div class="mt-6 flex justify-end gap-x-4">
+					<input asp-for="PK_Vendedor" id="pkVendedor" type="hidden" />
+					<input asp-for="FK_Usuario_Creacion" value="1" type="hidden" />
+					<input asp-for="FK_Usuario_Modificacion" value="1" type="hidden" />
+					<button type="submit" id="btnActualizar" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+					<button asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</button>
+				</div>
+			</form>
+		<div/>
+	<div/>
 
 <!--                  Final Modal de Actualizar Tempalte                        -->
 
@@ -186,67 +230,183 @@
 		// Agregar evento al campo de texto para filtrar en tiempo real
 		document.getElementById('nombre_vendedor').addEventListener('input', filtrarTabla);
 
-	
-	//Inicio de alerta de guardar de crear
+		/*Cargar Datos Modal
+		 Incorporado el 20/7/24 por Joseth Araya
+		*/
 
-	document.getElementById('btnGuardar').addEventListener('click', function (event) {
-		event.preventDefault(); // Detener el envío normal del formulario
-
-		// Validar campos requeridos
-		var nombre = document.querySelector('[name="Nombre"]').value;
-		var telefono = document.querySelector('[name="Telefono"]').value;
-		var correo = document.querySelector('[name="Correo"]').value;
-		var estado = document.querySelector('[name="Estado"]').value;
-
-		if (!nombre || !telefono || !correo || !estado) {
-			// Mostrar mensaje de error con SweetAlert2 si no están completos los campos
-			Swal.fire({
-				icon: 'error',
-				title: 'Error',
-				text: 'Por favor complete todos los campos requeridos.',
-				confirmButtonColor: '#3085d6',
-				cancelButtonColor: '#d33',
-				confirmButtonText: 'OK'
-			});
-		} else {
-			// Crear objeto FormData con los datos del formulario
-			var formData = new FormData(document.getElementById('formcreate'));
-
-			// Enviar los datos al controlador utilizando fetch
-			fetch('/Vendedores/CrearVendedor', {
-				method: 'POST',
-				body: formData
+		function ActuVarVendedor(PK) {
+			console.log("Respuesta   " + PK);
+			fetch(`/Vendedores/ObtenerVendedor?PK=${PK}`, {
+				method: 'GET'
 			})
 				.then(response => {
 					if (response.ok) {
-						// Mostrar mensaje de éxito con SweetAlert2
-						Swal.fire({
-							icon: 'success',
-							title: 'Guardado Correctamente',
-							showConfirmButton: true,
-							confirmButtonColor: '#3085d6',
-							confirmButtonText: 'OK'
-						}).then((result) => {
-							// Redirigir a la página de índice de vendedores después de guardar
-							window.location.href = '/Vendedores/Index';
-						});
+						return response.json();
 					} else {
-						throw new Error('Error al guardar los datos');
+						throw new Error('Error al obtener el proveedor');
 					}
 				})
+				.then(data => {
+					console.log('Datos del proveedor:', data);
+
+					/*Seccion dwe prubas*/
+					console.log('Datos del pK_Vendedor:', data.pK_Vendedor);
+					console.log('Datos del nombre:', data.nombre);
+					console.log('Datos del telefono:', data.telefono);
+					console.log('Datos del correo:', data.correo);
+					console.log('Datos del estado:', data.estado);
+					console.log('Datos del FK_Usuario_Creacion:', data.fK_Usuario_Creacion);
+					console.log('Datos del FK_Usuario_Modificacion:', data.fK_Usuario_Modificacion);
+
+					// Asignación de datos al modal
+					document.getElementById('pkVendedor').value = data.pK_Vendedor;
+					document.getElementById('nombre').value = data.nombre;
+					document.getElementById('tel').value = data.telefono;
+					document.getElementById('email').value = data.correo;
+					document.getElementById('state').value = data.estado.toString().toLowerCase();
+					// document.getElementById('direccion').value = data.fK_Usuario_Creacion.toString();
+					// document.getElementById('direccion').value = data.fK_Usuario_Modificacion.toString();
+
+
+					// Abrir el modal de actualización
+					abrirModal('modalActuVendedor');
+				})
 				.catch(error => {
-					// Mostrar mensaje de error con SweetAlert2
+					// Mostrar mensaje de error con SweetAlert2 u otra forma
+					console.error('Error:', error);
 					Swal.fire({
 						icon: 'error',
 						title: 'Error',
-						text: error.message,
+						text: 'Error al obtener los datos del proveedor',
 						confirmButtonColor: '#3085d6',
 						cancelButtonColor: '#d33',
 						confirmButtonText: 'OK'
 					});
 				});
 		}
-	});
+	
+		//Inicio de alerta de guardar de crear
+
+		document.getElementById('btnGuardar').addEventListener('click', function (event) {
+			event.preventDefault(); // Detener el envío normal del formulario
+
+			// Validar campos requeridos
+			var nombre = document.querySelector('[name="Nombre"]').value;
+			var telefono = document.querySelector('[name="Telefono"]').value;
+			var correo = document.querySelector('[name="Correo"]').value;
+			var estado = document.querySelector('[name="Estado"]').value;
+
+			if (!nombre || !telefono || !correo || !estado) {
+				// Mostrar mensaje de error con SweetAlert2 si no están completos los campos
+				Swal.fire({
+					icon: 'error',
+					title: 'Error',
+					text: 'Por favor complete todos los campos requeridos.',
+					confirmButtonColor: '#3085d6',
+					cancelButtonColor: '#d33',
+					confirmButtonText: 'OK'
+				});
+			} else {
+				// Crear objeto FormData con los datos del formulario
+				var formData = new FormData(document.getElementById('formcreate'));
+
+				// Enviar los datos al controlador utilizando fetch
+				fetch('/Vendedores/CrearVendedor', {
+					method: 'POST',
+					body: formData
+				})
+					.then(response => {
+						if (response.ok) {
+							// Mostrar mensaje de éxito con SweetAlert2
+							Swal.fire({
+								icon: 'success',
+								title: 'Guardado Correctamente',
+								showConfirmButton: true,
+								confirmButtonColor: '#3085d6',
+								confirmButtonText: 'OK'
+							}).then((result) => {
+								// Redirigir a la página de índice de vendedores después de guardar
+								window.location.href = '/Vendedores/Index';
+							});
+						} else {
+							throw new Error('Error al guardar los datos');
+						}
+					})
+					.catch(error => {
+						// Mostrar mensaje de error con SweetAlert2
+						Swal.fire({
+							icon: 'error',
+							title: 'Error',
+							text: error.message,
+							confirmButtonColor: '#3085d6',
+							cancelButtonColor: '#d33',
+							confirmButtonText: 'OK'
+						});
+					});
+			}
+		});
+
+		/* Metodo de actualizar 
+		Incorporado el 20/7/24 por Joseth Araya */
+
+		document.getElementById('btnActualizar').addEventListener('click', function (event) {
+			event.preventDefault(); // Detener el envío normal del formulario
+
+			// Validar campos requeridos
+			var nombre = document.getElementById('nombre').value;
+			var telefono = document.getElementById('tel').value;
+			var correo = document.getElementById('email').value;
+			var estado = document.getElementById('state').value;
+
+			if (!nombre || !telefono || !correo || !estado) {
+				// Mostrar mensaje de error con SweetAlert2 si no están completos los campos
+				Swal.fire({
+					icon: 'error',
+					title: 'Error',
+					text: 'Por favor complete todos los campos requeridos.',
+					confirmButtonColor: '#3085d6',
+					cancelButtonColor: '#d33',
+					confirmButtonText: 'OK'
+				});
+			} else {
+				// Crear objeto FormData con los datos del formulario
+				var formData = new FormData(document.getElementById('formupdate'));
+
+				// Enviar los datos al controlador utilizando fetch
+				fetch('/Vendedores/ActualizarVendedor', {
+					method: 'POST',
+					body: formData
+				})
+					.then(response => {
+						if (response.ok) {
+							// Mostrar mensaje de éxito con SweetAlert2
+							Swal.fire({
+								icon: 'success',
+								title: 'Actualizado Correctamente',
+								showConfirmButton: true,
+								confirmButtonColor: '#3085d6',
+								confirmButtonText: 'OK'
+							}).then((result) => {
+								// Redirigir a la página de índice de vendedores después de guardar
+								window.location.href = '/Vendedores/Index';
+							});
+						} else {
+							throw new Error('Error al guardar los datos');
+						}
+					})
+					.catch(error => {
+						// Mostrar mensaje de error con SweetAlert2
+						Swal.fire({
+							icon: 'error',
+							title: 'Error',
+							text: error.message,
+							confirmButtonColor: '#3085d6',
+							cancelButtonColor: '#d33',
+							confirmButtonText: 'OK'
+						});
+					});
+			}
+		});
 
 		// <!-- Inicio Validación botón desactivar -->
 		document.querySelectorAll('.desactivar-form').forEach(function (form) {
